# jwt-user-management

./: .gitignore  README.md  pyproject.toml  pytest.ini  requirements-dev.txt
backend/: .env.example  README.md  alembic.ini  requirements.txt
backend/alembic/: env.py
backend/app/: admin_streamlit.py  main.py
backend/tests/: conftest.py  test_admin_proxy.py  test_auth.py  test_auth_edge_cases.py  test_auth_more.py  test_invites.py  test_invites_html.py  test_invites_more.py  test_password_reset.py  test_password_reset_more.py  test_rate_limiting.py  test_security_headers_and_origin.py  test_token_hash_uniqueness.py  test_users_admin_key.py  test_users_jwt.py  test_users_more.py
e2e/: README.md  __init__.py  _debug.py  conftest.py  connect_like_proxy.py  pytest.ini  requirements.txt  streamlit_nav.py  test_admin_browser.py  test_admin_invite_accept_browser.py  test_admin_update_user_browser.py  test_password_reset_browser.py  test_streamlit_admin_full_journey_browser.py  test_streamlit_ui_coverage_browser.py  test_user_browser.py  test_user_negative_browser.py
fastapi_workbench/: .gitignore  CHANGELOG.md  README.md  detect.py  middleware.py  pyproject.toml  redirects.py  runner.py  types.py  urls.py
fastapi_workbench/fastapi_workbench/: __init__.py  detect.py  middleware.py  runner.py  urls.py
fastapi_workbench/src/fastapi_workbench/: __init__.py  detect.py  middleware.py  redirects.py  runner.py  types.py  urls.py
fastapi_workbench/tests/: __init__.py  mock_workbench.py  real_workbench_app.py  test_connect_base_path_header.py  test_middleware_with_mock_workbench.py  test_real_workbench_integration.py  test_urls.py  workbench_env.py
fluxlit_app/: .env.example  README.md  api_backend.py  config.py  cookie_debug_middleware.py  fluxlit.toml  fluxlit_gateway.py  fluxlit_settings.py  fluxlit_trace.py  main.py  paths.py  pyproject.toml  requirements.txt  run_workbench.py  workbench_app.py
fluxlit_app/app/: asgi.py  main.py
fluxlit_app/tests/: conftest.py  test_backend_url_validation.py  test_fluxlit_async_rapsqlite_db.py  test_fluxlit_directory_lookup.py  test_fluxlit_email_invites_and_password_reset.py  test_fluxlit_run_workbench.py  test_fluxlit_testing_client_suite.py  test_gateway_docs.py  test_meta_and_root.py  test_run_workbench.py  test_streamlit_fluxlit_apptest.py  test_streamlit_fluxlit_functional.py  test_streamlit_fluxlit_more.py
fluxlit_app/ui/: __init__.py  auth_state.py  backend_url.py  http.py  url_session_bridge.py
infra/cac-nginx/: README.md  build_crl_bundle.sh  docker-compose.yml  fetch_and_build_crl_bundle.sh  nginx.conf  setup_certs.sh
infra/connect-proxy/: docker-compose.yml  nginx.conf.template  nginx_preserve.conf.template  nginx_strip.conf.template
j39-user-management/: .env.example  README.md  alembic.ini  deployment_script.sql  publish.sh  requirements.txt
j39-user-management/alembic/: env.py
j39-user-management/app/: db.py  main.py  models.py
j39-user-management/rsconnect-python/: j39-user-management.json
scripts/: migrate_databases.sh
streamlit_admin/: .env.example  README.md  app.py  requirements.txt
streamlit_admin/tests/: helpers.py  test_admin_session_apptest.py  test_app_apptest.py  test_app_more_apptest.py  test_backend_url_validation.py
streamlit_app/: app.py  config.yaml  requirements.txt
streamlit_app/tests/: test_app_apptest.py  test_app_more_apptest.py
streamlit_common/: __init__.py  auth_state.py  backend_client.py  ui.py
streamlit_common/tests/: test_auth_state_unit.py  test_backend_client_unit.py  test_ui_unit.py
streamlit_user/: .env.example  README.md  __init__.py  app.py  requirements.txt  user_app.py
streamlit_user/tests/: app_paths.py  test_backend_url_validation.py  test_user_app_apptest.py  test_user_app_more_apptest.py  test_user_backend_url_validation.py
streamlit_user/user_common/: __init__.py  auth_state.py  backend_client.py  ui.py
user_management_api/: .env.example  README.md  USER_GUIDE.md  config.py  requirements.txt  run_hypercorn_mtls.py  run_tests.sh  run_workbench.py
user_management_api/admin_ui/: README.md  app.py  config.example.yaml  requirements.txt
user_management_api/app/: db.py  (+7 more)
user_management_streamlit/: README.md  __init__.py  app.py  config.py  html_app.py  requirements-html.txt  requirements.txt  run_html.py  user_app.py
user_management_ui/: .env.example  README.md  app.py  user_app.py
(+203 files in other folders)
